<resources>
    <string name="app_name">Smart medicine alarm</string>
    <string name="username">Username</string>
    <string name="email_address">Email</string>
    <string name="password">password</string>
    <string name="log_in">Login</string>
    <string name="don_t_have_an_account_yet">I do not have an account?</string>
    <string name="sign_up">Create a new account</string>
    <string name="field_required">The field is required</string>
    <string name="inv_email">Invalid email</string>
    <string name="pass_too_short">The password is too short</string>
    <string name="i_have_an_account">I already have an account!</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">mobile number</string>
    <string name="logging_in">Login...</string>
    <string name="user_not_found">User does not exist</string>
    <string name="error">Error</string>
    <string name="cancel">Cancel</string>
    <string name="error_msg">Error! Please try again later</string>
    <string name="alerts">Alarms</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="time">time</string>
    <string name="date">date</string>
    <string name="note">note</string>
    <string name="repeat">Recurring</string>
    <string name="every_saturday">Every Saturday</string>
    <string name="every_sunday">Every Sunday</string>
    <string name="every_monday">Every Monday</string>
    <string name="every_tuesday">Every Tuesday</string>
    <string name="every_wednesday">Every Wednesday</string>
    <string name="every_thursday">Every Thursday</string>
    <string name="every_friday">Every Friday</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="update_profile">Edit profile</string>
    <string name="add_medicine">Add medicine</string>
    <string name="notification">Notification</string>
    <string name="logout">Logout</string>
    <string name="medicine_name">Medicine name</string>
    <string name="dosage">Dosage</string>
    <string name="no_medicines_to_show">No treatment to show</string>
    <string name="update_medicine">Modify medication</string>
    <string name="wait">Wait...</string>
    <string name="suc">Done successfully!</string>
    <string name="medicines">Medicines</string>
    <string name="alarm_time">Alarm time</string>
    <string name="select">Select</string>
    <string name="ch_re_days">Choose recurring days</string>
    <string name="ch_medicine">Please choose medicine</string>
    <string name="update">Update</string>
    <string name="done">done</string>
    <string name="total">Total dosage:</string>
    <string name="no_reports_to_show">No reports to show</string>
    <string name="reports">Reports</string>
</resources>