<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollAlarm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white"

            >
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                >
                <ImageView
                    android:id="@+id/close"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_close"
                    android:padding="3dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/add_alarm"
                    android:layout_gravity="center"
                    />
            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:orientation="horizontal"
                    android:background="@drawable/small_stroke_gray"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:gravity="center_vertical"
                    >
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_clock"
                        android:padding="3dp"
                        app:tint="@color/gray4"
                        />
                    <androidx.legacy.widget.Space
                        android:layout_width="8dp"
                        android:layout_height="0dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:hint="@string/time"
                        android:textColorHint="@color/gray4"
                        android:gravity="center_vertical"
                        />
                </LinearLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@drawable/small_stroke_gray"
                    android:layout_marginTop="12dp"
                    android:textSize="14sp"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:hint="@string/note"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/small_stroke_gray"
                    >
                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:backgroundTint="@color/colorPrimary"
                        />

                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/repeat"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:layout_marginTop="12dp"
                    >
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="@string/every_saturday"
                        android:buttonTint="@color/colorPrimary"

                        />
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"
                        android:text="@string/every_sunday"
                        android:buttonTint="@color/colorPrimary"

                        />
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"
                        android:text="@string/every_monday"
                        android:buttonTint="@color/colorPrimary"

                        />
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"
                        android:text="@string/every_tuesday"
                        android:buttonTint="@color/colorPrimary"

                        />
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"
                        android:text="@string/every_wednesday"
                        android:buttonTint="@color/colorPrimary"

                        />
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"
                        android:text="@string/every_thursday"
                        android:buttonTint="@color/colorPrimary"

                        />
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"
                        android:text="@string/every_friday"
                        android:buttonTint="@color/colorPrimary"

                        />
                </LinearLayout>

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:background="@drawable/small_rounded_primary"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:text="@string/add_alarm"
                    />

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>