<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="model"
            type="com.app.medicinealert.models.MedicineModel" />
    </data>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white"

            >
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                >
                <ImageView
                    android:id="@+id/close"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_close"
                    android:padding="3dp"
                    />
                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/add_medicine"
                    android:layout_gravity="center"
                    />
            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:text="@string/medicine_name"
                    />



                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@drawable/small_stroke_gray"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:hint="@string/medicine_name"
                    android:text="@={model.name}"
                    error="@{model.error_name}"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_marginTop="8dp"
                    android:text="@string/dosage"
                    />



                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@drawable/small_stroke_gray"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:hint="@string/dosage"
                    android:text="@={model.dosage}"
                    error="@{model.error_dosage}"
                    />


                <androidx.legacy.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:background="@drawable/small_rounded_primary"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:text="@string/add_medicine"
                    />

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>